--- a/Web_Dev.html
+++ b/Web_Dev.html
@@ -2,24 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="Stylesheet" href="Web_Dev.css">
         <title>Nissan Skyline</title>
-        <style>
-            h1{
-                color:rgb(3, 61, 128);
-                text-align: center;
-            }
-            h2{
-                color:rgb(3, 61, 128);
-                
-            }
-            body{
-                color: rgb(105, 11, 66);
-                background-image:url("C:\\Users\\Hp\\Downloads\\sa1.jpg");
-            }
-            .imglink{
-               text-align: center; 
-            }
-        </style>
     </head>
     <body >
      <h1>Nissan Skyline GT R34</h1>
