--- a/Web_Dev.html
+++ b/Web_Dev.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="Stylesheet" href="Web_Dev.css">
+        <link rel="stylesheet" href="Web_Dev.css">
         <title>Nissan Skyline</title>
     </head>
     <body >
