Changes in CSS File

--- a/Web_Dev.html
+++ b/Web_Dev.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="Stylesheet" href="Web_Dev.css">
+        <link rel="stylesheet" href="Web_Dev.css">
         <title>Nissan Skyline</title>
     </head>
     <body >
@@ -14,8 +14,8 @@
         and the Super-HICAS four-wheel steering
     </p>
     <article class="imglink">
-        <img src="C:\Users\Hp\Downloads\syline 1.jpg" width="500" height="300" >
-        <div><a href="https://www.nissan.in/vehicles/new/GT-R.html" target="_blank"> Click Here To Buy One</a></div>
+       <img src="C:\Users\Hp\Downloads\syline 1.jpg" width="500" height="300" >
+       <div><a href="https://www.nissan.in/vehicles/new/GT-R.html" target="_blank"> Click Here To Buy One</a></div>
         <div><a href="#specs">Click here for Specifications</a></div>
     </article> 
     </section>
