--- a/Web_Dev.html
+++ b/Web_Dev.html
@@ -30,7 +30,7 @@
              The R34 V·Spec N1 was equipped similar to the R32 and R33 N1 models a homologation special.
              It was sold without air conditioning, audio equipment, rear wiper, or boot lining, but ABS remained.
               The new R34 N1 was also given the new R34 N1 engine. Only 38[63] known R34 V·Spec N1 models were produced from the factory, 12 of which Nismo used for Super Taikyu racing.
-               The rest were sold to various customers, mostly racing teams and tuning garages
+               The rest were sold to various customers, mostly racing teams and tuning garages.
             
         </p>
     </section>
